--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,4 @@
 test:
   override:
-    - echo "Hello world!"
-    # - echo "Hello world!" && exit 1
+    # - echo "Hello world!"
+    - echo "Hello world!" && exit 1
