--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,4 @@
 test:
   override:
-    # - echo "Hello world1234!"
-    - echo "Hello world!123456" && exit 1
+    - echo "Hello world1234!"
+    # - echo "Hello world!1234567" && exit 1
