--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
 test:
   override:
     # - echo "Hello world12345678!"
-    - echo "Hello world!1234567" && exit 1
+    # - echo "Hello world!1234567" && exit 1
     - source test.sh
