--- a/circle.yml
+++ b/circle.yml
@@ -2,4 +2,4 @@ test:
   override:
     # - echo "Hello world123456!"
     - echo "Hello world!23" && exit 1
-    # - source test.sh
+    - source test.sh
