--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
 test:
   override:
     - echo "Hello world123456789!"
+    - echo "$SECRET"
     # - echo "Hello world!12345679" && exit 1
     - source test.sh
